unpackaged/main/default/objects/Data_Verification__c/Data_Verification__c.object-meta.xml
<CustomObject>
    <label>Data Verification</label>
    <nameField>
        <displayFormat>DataVer-{00000}</displayFormat>
        <label>Data Verification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Verification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>