unpackaged/main/default/objects/Data_Verification__c/fields/Browser_Location_Available__c.field-meta.xml
<CustomField>
    <fullName>Browser_Location_Available__c</fullName>
    <label>Browser Location Available</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allowed</fullName>
                <default>true</default>
                <label>Allowed</label>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>