unpackaged/main/default/objects/Data_Verification__c/fields/Location_Distance_from_PG1_Home__c.field-meta.xml
<CustomField>
    <fullName>Location_Distance_from_PG1_Home__c</fullName>
    <inlineHelpText>In Miles</inlineHelpText>
    <label>Location Distance from PG1 Home</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>