unpackaged/main/default/objects/Data_Verification__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Data Verification</relationshipLabel>
    <relationshipName>Data_Verification</relationshipName>
    <type>Lookup</type>
</CustomField>